# sshse

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
docs/commands/: creds.md
docs/testing/: system-testing.md
examples/: print_credentials.py
src/: config.rs  credentials.rs  history.rs  main.rs
sshse/: __init__.py  __main__.py  paths.py
sshse/adapters/: __init__.py
sshse/cli/: __init__.py  _shared.py  app.py  config.py  creds.py  history_browser.py  history_menu.py  ssh_launcher.py
sshse/config/: __init__.py
sshse/core/: __init__.py  credentials.py  history.py  interfaces.py
sshse/plugins/: __init__.py
testing/: system-testing.md
tests/: conftest.py  test_cli_app.py  test_cli_creds.py  test_cli_creds_cli.py  test_cli_creds_helpers.py  test_config.py  test_credentials.py  test_history.py  test_history_browser.py  test_history_menu.py  test_interfaces.py  test_ssh_launcher.py
tests/system/: conftest.py  ssh_backend.py  test_cli_system.py
tests/unit/: test_cli_app.py  test_cli_creds_cli.py  test_cli_creds_helpers.py  test_config.py  test_history.py  test_history_browser.py  test_paths.py  test_ssh_launcher.py
