[package]
name = "sshx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
base64 = "0.21"

